# idc-index

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  s5cmdUrls.cmake  setup.py  sitemap.xml
.github/: CONTRIBUTING.md  get-latest-index.py  get_latest_index.py
.github/workflows/: cd.yml  ci.yml  commit-pr-release-manager.yml  get-latest-index.yml  keep-alive.yaml  python-package.yml  update-indices-docs.yml
api/: index.html
docs/: api.md  cli_tools.rst  column_descriptions.md  conf.py  index.md  indices_reference.md
docs/api/: idc_index.rst
docs/dev/: architecture.md
idc_index/: __init__.py  cli.py  index.py  indices_util.py
idc_index/idc_index_data/: __init__.py
idc_index/s5cmd/: __init__.py
notebooks/getting_started/: exploring_clinical_data.ipynb
queries/: idc_index.sql
scripts/: README.md  generate_indices_cache.py  generate_indices_docs.py
src/: logic.py  main.py
tests/: idcindex.py  prior_version_manifest.s5cmd  study_manifest_aws.s5cmd  study_manifest_bogus.s5cmd  study_manifest_gcs.s5cmd  test_package.py
