[build-system]
requires = ["hatchling","hatch-vcs"]

build-backend = "hatchling.build"

[project]
name = "idc-index"
authors = [
  { name = "Andrey Fedorov", email = "andrey.fedorov@gmail.com" },
  { name = "Vamsi Thiriveedhi", email = "vthiriveedhi@mgh.harvard.edu" },
]
description = "Package to query and download data from an index of ImagingDataCommons"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "click",
  'duckdb>=0.10.0,<=1.2.1',
  "idc-index-data==21.0.0",
  "packaging",
  "pandas<=2.2.4",
  "platformdirs",
  "psutil",
  "pyarrow",
  "requests",
  "s5cmd>=0.3.2",
  "sphinx-click",
  "tqdm"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.scripts]
idc = 'idc_index.cli:idc'

[project.urls]
Homepage = "https://github.com/ImagingDataCommons/idc-index"
"Bug Tracker" = "https://github.com/ImagingDataCommons/idc-index/issues"
Discussions = "https://discourse.canceridc.dev/"
Changelog = "https://github.com/ImagingDataCommons/idc-index/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "idc_index/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  # https://github.com/dateutil/dateutil/issues/1314
  "ignore:datetime.datetime.utcfromtimestamp.. is deprecated.*:DeprecationWarning:dateutil",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
python_files = [
  "idcindex.py",
  "*_test.py",
  "test_*.py",
]


[tool.coverage]
run.source = ["idc_index"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["idc_index", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "idc_index.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
src = ["idc_index"]
extend-exclude = ["./CONTRIBUTING.md"]

lint = { 
  extend-select = [
    "B", "I", "ARG", "C4", "D", "EM", "ICN", "G", "PGH", "PIE",
    "PL", "PT", "PTH", "RET", "RUF", "SIM", "T20", "UP", "YTT",
    "EXE", "NPY", "PD"
  ],
  ignore = [
    "PLR09", "PLR2004", "ISC001",
    "B007", "B904", "E722", "EM101", "F841", "G003", "G004",
    "PD011", "PD901", "PT009", "PTH100", "PTH103", "PTH107",
    "PTH110", "PTH118", "PTH119", "PTH120", "PTH123", "RET504",
    "RET506", "SIM102", "SIM108", "SIM117", "T201"
  ],
  isort = { required-imports = ["from __future__ import annotations"] },
  per-file-ignores = {
    "docs/conf.py" = ["D"],
    "tests/**" = ["D", "T20"],
    "noxfile.py" = ["D", "T20"]
  },
  pydocstyle = { convention = "google" }
}

[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
  # Exceptions below are specific to idc-index
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "logging-fstring-interpolation",
  "logging-not-lazy",
  "no-else-raise",
  "raise-missing-from",
  "undefined-loop-variable",
  "unspecified-encoding",
  "unused-variable",
]
